# WatermelonDBEncrypted

./: package.json
docs/: Android-SQLCipher.md  ENCRYPTION.md
native/android/: build.gradle
native/android-jsi/src/main/cpp/: CMakeLists.txt
native/android/src/main/java/com/nozbe/watermelondb/: Schema.java  WMDatabase.java  WMDatabaseBridge.java  WMDatabaseDriver.java
native/android/src/main/java/com/nozbe/watermelondb/encrypted/: BuildConfig.java  Connection.java  WMDatabaseBridge.java  WatermelonDBEncryptedPackage.java  WatermelonDBPackage.java
native/android/src/main/java/com/nozbe/watermelondb/encrypted/utils/: DatabaseUtils.java  Schema.java
native/shared/: Database.cpp  Database.h
src/adapters/sqlite/: index.js
src/adapters/sqlite/sqlite-node/: Database.js  DatabaseDriver.js
